2014-08-18  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* pandoradb.sql,
	  pandoradb.data.postgreSQL.sql,
	  pandoradb.data.oracle.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql:
	Added some inserts with the new action and command to create
	a ticket in Integria IMS.

	* include/styles/pandora.css: Fixed the header style.

	* operation/menu.php: Now the incidents statistics menu option
	takes the user to the correct place if the "Integria incidents"
	option is selected.

	* operation/integria_incidents/incident.incident.php: Fixed the
	incident edition.

	* operation/integria_incidents/incident.php: Improved the tab
	images.

	* operation/integria_incidents/incident.workunits.php: Now the
	default time of the incident workunits is 0.

	* operation/integria_incidents/incident_detail.php: File removed.

	* operation/integria_incidents/incident_statistics.php: Now this
	section show the real statistics of the Integria IMS incidents.

2014-08-14  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/update_manager/update_manager.online.php,
	include/functions_update_manager.php,
	include/ajax/update_manager.ajax.php: fixed the update manager when
	some tar formats, and fixed the versions copy&paste error in the
	code.

2014-08-14  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/help/clippy/agent_out_of_limits.php,
	include/help/clippy/modules_not_init.php,
	include/functions_clippy.php,
	operation/agentes/estado_monitores.php,
	operation/agentes/estado_generalagente.php: wip in the clippy
	project.

2014-08-14  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/help/clippy/godmode_agentes_modificar_agente.php,
	include/help/clippy/homepage.php,
	include/help/clippy/godmode_agentes_configurar_agente.php: updated
	the text from the works of Carla. Thanks Carla.

2014-08-14  Miguel de Dios <miguel.dedios@artica.es>
	