@@ -38,6 +38,7 @@ if (! isset($_SESSION['id_usuario'])) {
 }
 
 $user_language = get_user_language ($_SESSION['id_usuario']);
+
 if (file_exists ('../include/languages/'.$user_language.'.mo')) {
 	$l10n = new gettext_reader (new CachedFileReader ('../include/languages/'.$user_language.'.mo'));
 	$l10n->load_tables();
@@ -45,6 +46,7 @@ if (file_exists ('../include/languages/'.$user_language.'.mo')) {
 
 /* Possible file locations */
 $safe_language = safe_url_extraclean ($user_language, "en");
+
 $safe_id = safe_url_extraclean ($id, "");
 $files = array ($config["homedir"]."/include/help/".$safe_language."/help_".$safe_id.".php",
 	$config["homedir"].ENTERPRISE_DIR."/include/help/".$safe_language."/help_".$safe_id.".php",
