@@ -1013,7 +1013,7 @@ function ui_print_help_icon ($help_id, $return = false, $home_url = '', $image =
 	$output = html_print_image ($image, true, 
 		array ("class" => "img_help",
 			"title" => __('Help'),
-			"onclick" => "open_help ('".$help_id."','".$home_url."')"));
+			"onclick" => "open_help ('" . $help_id . "','" . $home_url . "')"));
 	if (!$return)
 		echo $output;
 	
